<resources>
    <string name="app_name">NUMAD22Sp_XiaohuLi</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="nameNEmail">Xiaohu Li li.xiaohu3@northeastern.edu</string>
    <string name="LC">Link Collector</string>
    <string name="cancel">cancel</string>
    <string name="name">Name</string>
    <string name="URL">URL</string>
    <string name="locator">Locator</string>
    <string name="Clicky">Clicky</string>
    <string name="AM">About Me</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
</resources>